--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ h2 {color: black}
 h3 {color: red}
 h3 {font-size: 340%}
 
-
+h4 {color: red}
+h4 {font-size: 340%}
 
 h5 {color:red }
 h5 {font-size: 340%}
