--- a/style.css
+++ b/style.css
@@ -1,17 +1,11 @@
 h1 {color:red}
 h1 {font-size: 340%}
+h1 {text-align: center;}
 
 h2 {font-size: 150%}
 h2 {color: black}
 
-h3 {color: red}
-h3 {font-size: 340%}
 
-h4 {color: red}
-h4 {font-size: 340%}
-
-h5 {color:red }
-h5 {font-size: 340%}
 
 
 
