--- a/style.css
+++ b/style.css
@@ -11,4 +11,6 @@ h2 {color: black}
 
 #ferrari {margin-left: 27%}
 #ferrari {width: 40% }
-#ferrari {size: -30000;}
+#ferrari {size: -2000;}
+
+#enzo {size: -500}
