--- a/style.css
+++ b/style.css
@@ -13,5 +13,6 @@ h2 {color: black}
 #ferrari {width: 40% }
 #ferrari {size: -1000;}
 
-#enzo {size: -1000; }
+#fabrica {margin-left: 27%}
+#fabrica {width: 40%}
 
