--- a/style.css
+++ b/style.css
@@ -11,8 +11,13 @@ h2 {color: black}
 
 #ferrari {margin-left: 27%}
 #ferrari {width: 40% }
-#ferrari {size: -1000;}
+#ferrari {size: -1000}
 
 #fabrica {margin-left: 27%}
 #fabrica {width: 40%}
+#fabrica {size: 250%}
+
+#enzo {margin-left: 27%}
+#enzo {width: 40%}
+#enzo {size: 250%}
 
