--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ h2 {color: black}
 #ferrari {width: 40% }
 #ferrari {size: -1000}
 
-#fabrica {margin-left: 27%}
+#fabrica {margin-left: 32%}
 #fabrica {width: 40%}
 #fabrica {size: 250%}
 
-#enzo {margin-left: 27%}
-#enzo {width: 40%}
-#enzo {size: 250%}
+#en {margin-left: 27%}
+#en {width: 40%}
+#en {size: 250%}
 
