--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2 {color: black}
 #ferrari {width: 40% }
 #ferrari {size: -1000}
 
-#fabrica {margin-left: 37%}
+#fabrica {margin-left: 3%5}
 #fabrica {width: 40%}
 #fabrica {size: 250%}
 
@@ -21,5 +21,5 @@ h2 {color: black}
 #en {width: 40%}
 #en {size: 250%}
 
-#fiat {margin-left: 37% }
+#fiat {margin-left: 35% }
 #fiat {width: 40%}
