--- a/style.css
+++ b/style.css
@@ -21,5 +21,10 @@ h2 {color: black}
 #en {width: 40%}
 #en {size: 250%}
 
-#fiat {margin-left: 27% }
+#fiat {margin-left: 27%}
 #fiat {width: 40%}
+#fiat {size: 250%}
+
+#monaco {margin-left: 27%}
+#monaco {width: 40%}
+#monaco {size: 250%}
