--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@ h1 {border: solid 3PX crimson}
 h2 {font-size: 150%}
 h2 {color: black}
 
+h3 {font-size: 150%}
+h3 {color: black}
 
+h4 {font-size: 150%}
+h4 {color: black}
+
+h5{font-size: 150%}
+h5{color: black}
 
 
 
@@ -37,3 +44,4 @@ h2 {color: black}
 #le mans 2 {margin-left: 24%}
 #le mans 2 {width: 40%}
 #le mans 2 {size: 250%}
+
